--- a/src/components/centerblock/playlist/Playlist.module.css
+++ b/src/components/centerblock/playlist/Playlist.module.css
@@ -1,4 +1,5 @@
 .centerblockContent {
+  height: 640px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -6,6 +7,7 @@
   -webkit-box-direction: normal;
   -ms-flex-direction: column;
   flex-direction: column;
+  overflow-y: auto;
 }
 
 .contentTitle {
