--- a/src/app/signin/Signin.module.css
+++ b/src/app/signin/Signin.module.css
@@ -1,4 +1,4 @@
-* {
+/* * {
   margin: 0;
   padding: 0;
   -webkit-box-sizing: border-box;
@@ -42,7 +42,7 @@ body {
   width: 100%;
   height: 100%;
   font-family: "StratosSkyeng", sans-serif;
-}
+} */
 
 .wrapper {
   width: 100%;
