--- a/src/components/playerbar/Playerbar.module.css
+++ b/src/components/playerbar/Playerbar.module.css
@@ -16,6 +16,10 @@
   flex-direction: column;
 }
 
+.timer {
+  text-align: end;
+}
+
 .barPlayerProgress {
   width: 100%;
   height: 5px;
@@ -123,13 +127,16 @@
   margin-right: 24px;
 }
 
-.playerBtnRepeatSvg {
+.playerBtnRepeatSvg,
+.playerBtnRepeatAct {
   width: 18px;
   height: 12px;
   fill: transparent;
   stroke: #696969;
 }
-
+.playerBtnRepeatAct {
+  stroke: #ffffff;
+}
 .playerBtnShuffle {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -218,12 +225,6 @@
   stroke: #ffffff;
   cursor: pointer;
 }
-._btnIcon:active .trackPlayLikeSvg,
-._btnIcon:active .trackPlayDislikeSvg {
-  fill: #696969;
-  stroke: #ffffff;
-  cursor: pointer;
-}
 
 .trackPlaySvg {
   width: 18px;
@@ -298,6 +299,18 @@
   height: 13px;
   fill: transparent;
   stroke: #696969;
+}
+
+
+.barVolumeBlock {
+  width: auto;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  padding: 0 92px 0 0;
 }
 
 .volumeContent {
