--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -14,23 +14,14 @@
 }
 
 .main {
-  -webkit-box-flex: 1;
-  -ms-flex: 1 1 auto;
   flex: 1 1 auto;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -ms-flex-wrap: wrap;
-  flex-wrap: wrap;
-  -webkit-box-pack: justify;
-  -ms-flex-pack: justify;
+  flex-wrap: nowrap;
   justify-content: space-between;
 }
 
 .mainCenterblock {
   width: auto;
-  -webkit-box-flex: 3;
-  -ms-flex-positive: 3;
   flex-grow: 3;
   padding: 20px 40px 20px 111px;
 }
