--- a/src/components/centerblock/playlist/Playlist.module.css
+++ b/src/components/centerblock/playlist/Playlist.module.css
@@ -1,39 +1,22 @@
 .centerblockContent {
+  /* width: 100%; */
   height: 640px;
-  display: -webkit-box;
-  display: -ms-flexbox;
+  /* height: 30%; */
   display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-  -ms-flex-direction: column;
   flex-direction: column;
   overflow-y: auto;
 }
 
 .contentTitle {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-  -ms-flex-direction: row;
   flex-direction: row;
-  -webkit-box-align: center;
-  -ms-flex-align: center;
   align-items: center;
-  -webkit-box-pack: justify;
-  -ms-flex-pack: justify;
   justify-content: space-between;
   margin-bottom: 24px;
 }
 
 .contentPlaylist {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-  -ms-flex-direction: column;
   flex-direction: column;
   overflow-y: auto;
 }
