--- a/src/components/playerbar/Playerbar.module.css
+++ b/src/components/playerbar/Playerbar.module.css
@@ -7,12 +7,7 @@
 }
 
 .barContent {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-  -ms-flex-direction: column;
   flex-direction: column;
 }
 
@@ -29,43 +24,26 @@
 .barPlayerBlock {
   height: 73px;
   display: flex;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-  -ms-flex-direction: row;
   flex-direction: row;
-  -webkit-box-pack: justify;
-  -ms-flex-pack: justify;
   justify-content: space-between;
 }
 
 .barPlayer {
   display: flex;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-  -ms-flex-direction: row;
   flex-direction: row;
-  -webkit-box-align: center;
-  -ms-flex-align: center;
   align-items: center;
-  -webkit-box-pack: start;
-  -ms-flex-pack: start;
   justify-content: flex-start;
 }
 
 .barVolumeBlock {
   width: auto;
   display: flex;
-  -webkit-box-align: center;
-  -ms-flex-align: center;
   align-items: center;
   padding: 0 92px 0 0;
 }
 
 .playerControls {
   display: flex;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-  -ms-flex-direction: row;
   flex-direction: row;
   padding: 0 27px 0 31px;
 }
@@ -77,8 +55,6 @@
 .playerBtnShuffle {
   padding: 5px;
   display: flex;
-  -webkit-box-align: center;
-  -ms-flex-align: center;
   align-items: center;
 }
 
@@ -118,34 +94,32 @@
 }
 
 .playerBtnRepeatSvg,
-.playerBtnRepeatAct {
+.repeatActive {
   width: 18px;
   height: 12px;
   fill: transparent;
   stroke: #696969;
 }
-.playerBtnRepeatAct {
+.repeatActive {
   stroke: #ffffff;
 }
 .playerBtnShuffle {
   display: flex;
-  -webkit-box-align: center;
-  -ms-flex-align: center;
   align-items: center;
 }
 
-.playerBtnShuffleSvg {
+.playerBtnShuffleSvg,
+.shuffleActive {
   width: 19px;
   height: 12px;
   fill: transparent;
   stroke: #696969;
 }
-
+.shuffleActive {
+  stroke: #ffffff;
+}
 .playerTrackPlay {
   display: flex;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-  -ms-flex-direction: row;
   flex-direction: row;
 }
 
@@ -153,11 +127,8 @@
   width: auto;
   display: -ms-grid;
   display: grid;
-  -ms-grid-columns: auto 1fr;
   grid-template-columns: auto 1fr;
   grid-template-areas: "image author" "image album";
-  -webkit-box-align: center;
-  -ms-flex-align: center;
   align-items: center;
 }
 
@@ -165,18 +136,11 @@
   width: 51px;
   height: 51px;
   background-color: #313131;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: center;
-  -ms-flex-align: center;
   align-items: center;
-  -webkit-box-pack: center;
-  -ms-flex-pack: center;
   justify-content: center;
   margin-right: 12px;
   grid-row: 1;
-  -ms-grid-row-span: 2;
   grid-column: 1;
   grid-area: image;
 }
@@ -252,12 +216,7 @@
 
 .trackPlayLikeDis {
   display: flex;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-  -ms-flex-direction: row;
   flex-direction: row;
-  -webkit-box-align: center;
-  -ms-flex-align: center;
   align-items: center;
   margin-left: 26%;
 }
@@ -283,48 +242,4 @@
   height: 13px;
   fill: transparent;
   stroke: #696969;
-}
-
-
-.barVolumeBlock {
-  width: auto;
-  display: flex;
-  -webkit-box-align: center;
-  -ms-flex-align: center;
-  align-items: center;
-  padding: 0 92px 0 0;
-}
-
-.volumeContent {
-  display: flex;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-  -ms-flex-direction: row;
-  flex-direction: row;
-  -webkit-box-align: center;
-  -ms-flex-align: center;
-  align-items: center;
-  -webkit-box-pack: end;
-  -ms-flex-pack: end;
-  justify-content: flex-end;
-}
-
-.volumeImage {
-  width: 13px;
-  height: 18px;
-  margin-right: 17px;
-}
-
-.volumeSvg {
-  width: 13px;
-  height: 18px;
-  fill: transparent;
-}
-
-.volumeProgress {
-  width: 109px;
-}
-
-.volumeProgressLine {
-  width: 109px;
 }
