--- a/src/components/navigation/Navigation.module.css
+++ b/src/components/navigation/Navigation.module.css
@@ -60,9 +60,14 @@
     margin-bottom: 16px;
   }
   
-  .menuLink {
+  .menuLink,
+  .menuLinkGray {
     color: #ffffff;
     font-weight: 400;
     font-size: 16px;
     line-height: 24px;
+  }
+
+  .menuLinkGray {
+    color: #696969;
   }
