--- a/src/components/signup/Signup.module.css
+++ b/src/components/signup/Signup.module.css
@@ -1,10 +1,56 @@
+/* * {
+  margin: 0;
+  padding: 0;
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
+}
+
+*:before,
+*:after {
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
+}
+
+a,
+a:visited {
+  text-decoration: none;
+  font-family: "StratosSkyeng", sans-serif;
+  cursor: pointer;
+}
+
+button,
+._btn {
+  cursor: pointer;
+}
+
+ul li {
+  list-style: none;
+}
+
+@font-face {
+  font-family: "StratosSkyeng";
+  src: local("StratosSkyeng"), local("StratosSkyeng"),
+    url("../fonts/StratosSkyeng.woff2") format("woff2"),
+    url("../fonts/StratosSkyeng.woff") format("woff"),
+    url("../fonts/StratosSkyeng.ttf") format("truetype");
+  font-weight: 400;
+  font-style: normal;
+}
+
+html,
+body {
+  width: 100%;
+  height: 100%;
+  font-family: "StratosSkyeng", sans-serif;
+} */
+
 .wrapper {
   width: 100%;
   min-height: 100%;
   overflow: hidden;
 }
 
-.containerEnter {
+.containerSignup {
   max-width: 100%;
   height: 100vh;
   margin: 0 auto;
@@ -12,20 +58,12 @@
   background-color: rgba(0, 0, 0, 0.85);
 }
 
-.modalBtnEnter:hover {
+.modalBtnSignupEnt:hover {
   background-color: #3f007d;
 }
 
-.modalBtnSignup:hover {
-  background-color: #f4f5f6;
-}
-
-.modalBtnEnter:active {
+.modalBtnSignupEnt:active {
   background-color: #271a58;
-}
-
-.modalBtnSignup:active {
-  background-color: #d9d9d9;
 }
 
 .modalBlock {
@@ -51,7 +89,7 @@
   -webkit-box-align: center;
   -ms-flex-align: center;
   align-items: center;
-  padding: 43px 47px 47px 40px;
+  padding: 43px 44px 47px 40px;
 }
 
 .modalFormLogin input:first-child {
@@ -77,6 +115,8 @@
   border-right: none;
   border-bottom: 1px solid #d0cece;
   padding: 8px 1px;
+  margin-right: 3px;
+  margin-bottom: 30px;
 }
 
 .modalInput::-webkit-input-placeholder {
@@ -115,26 +155,32 @@
   color: #d0cece;
 }
 
-.modalBtnEnter {
+.modalBtnSignupEnt,
+.modalBtnSignupEntErr {
   width: 278px;
-  height: 52px;
+  height: 62px;
   background-color: #580ea2;
   border-radius: 6px;
-  margin-top: 60px;
-  margin-bottom: 20px;
+  margin-left: 4px;
   border: none;
-  display: -webkit-box;
-  display: -ms-flexbox;
+  margin-top: 30px;
+  /* display: -webkit-box; */
+  /* display: -ms-flexbox; */
   display: flex;
-  -webkit-box-align: center;
-  -ms-flex-align: center;
+  /* -webkit-box-align: center; */
+  /* -ms-flex-align: center; */
   align-items: center;
-  -webkit-box-pack: center;
-  -ms-flex-pack: center;
+  /* -webkit-box-pack: center; */
+  /* -ms-flex-pack: center; */
   justify-content: center;
 }
 
-.modalBtnEnter a {
+.modalBtnSignupEntErr {
+  margin-top: 5px;
+}
+
+.modalBtnSignupEnt a,
+.modalBtnSignupEntErr a {
   width: 100%;
   height: 100%;
   font-style: normal;
@@ -143,60 +189,21 @@
   line-height: 24px;
   letter-spacing: -0.05px;
   color: #ffffff;
-  display: -webkit-box;
-  display: -ms-flexbox;
+  /* display: -webkit-box; */
+  /* display: -ms-flexbox; */
   display: flex;
-  -webkit-box-align: center;
-  -ms-flex-align: center;
+  /* -webkit-box-align: center; */
+  /* -ms-flex-align: center; */
   align-items: center;
-  -webkit-box-pack: center;
-  -ms-flex-pack: center;
+  /* -webkit-box-pack: center; */
+  /* -ms-flex-pack: center; */
   justify-content: center;
 }
 
-.modalBtnSignup {
-  width: 278px;
-  height: 52px;
-  background-color: transparent;
-  border: 1px solid #d0cece;
-  border-radius: 6px;
-  font-style: normal;
-  font-weight: 400;
+.error {
+  margin-top: 0;
+  color: darkred;
   font-size: 18px;
-  line-height: 24px;
-  letter-spacing: -0.05px;
-  color: #000000;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-  -ms-flex-align: center;
-  align-items: center;
-  -webkit-box-pack: center;
-  -ms-flex-pack: center;
-  justify-content: center;
-}
-
-.modalBtnSignup a {
-  width: 100%;
-  height: 100%;
-  font-style: normal;
-  font-weight: 400;
-  font-size: 18px;
-  line-height: 24px;
-  letter-spacing: -0.05px;
-  color: #000000;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-  -ms-flex-align: center;
-  align-items: center;
-  -webkit-box-pack: center;
-  -ms-flex-pack: center;
-  justify-content: center;
-}
-
-.login {
-  margin-bottom: 30px;
+  font-weight: 500;
+  line-height: 150%;
 }
