Commit all changes in hw 5.5

--- a/src/components/sidebar/sidebarPersonal/SidebarPersonal.module.css
+++ b/src/components/sidebar/sidebarPersonal/SidebarPersonal.module.css
@@ -15,10 +15,14 @@
     margin-right: 16px;
   }
   
-  .sidebarIcon {
+  .sidebarIcon,
+  .sidebarIconAuth {
     width: 43px;
     height: 43px;
     background-color: #313131;
     border-radius: 50%;
+  }
+  
+  .sidebarIconAuth {
     cursor: pointer;
   }
