--- a/src/app/error.module.css
+++ b/src/app/error.module.css
@@ -1,52 +1,43 @@
 .container {
-    max-width: 520px;
-    height: 450px;
-    margin: 300px auto;
-    background-color: #ffffff;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    gap: 20px;
-  }
-  .scaryText {
-    font-weight: bold;
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: flex-end;
-    color: red;
-    font-size: 36px;
-  } 
-  .errorButton {
-    font-weight: 500;
-    font-size: 30px;
-    border: 1px solid red;
-    border-radius: 15px;
-    padding: 6px 10px;
-    background-color: rgb(65, 124, 63);
-    width: 300px;
-    height: 60px;
-    color: #000000;
-    flex-direction: row;
-    align-items: center;
+  max-width: 520px;
+  height: 450px;
+  margin: 300px auto;
+  background-color: #ffffff;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 20px;
 }
-/* .error_errorButton__0S5WM {
-    font-style: bold;
-    font-weight: 500;
-    font-size: 24px;
-    line-height: 100px;
-    border: 1px solid #ffffff;
-    border-radius: 15px;
-    padding: 6px 10px;
-  } */
-  .btnText:hover {
-    border-color: #d9b6ff;
-    color: #d9b6ff;
-    cursor: pointer;
-  }
-  .sidebarImg {
-    height: auto;
-    border-radius: 200px;
-    width: 250px;
-    background-color: black;
-  }
+.smileText {
+  font-weight: bold;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: flex-end;
+  color: red;
+  font-size: 36px;
+}
+.errorButton {
+  font-weight: 500;
+  font-size: 30px;
+  border: 1px solid red;
+  border-radius: 15px;
+  padding: 6px 10px;
+  background-color: rgb(65, 124, 63);
+  width: 300px;
+  height: 60px;
+  color: #000000;
+  flex-direction: row;
+  align-items: center;
+}
+.btnText:hover {
+  border-color: #d9b6ff;
+  color: #d9b6ff;
+  cursor: pointer;
+}
+.sidebarImg {
+  height: auto;
+  border-radius: 200px;
+  width: 250px;
+  background-color: black;
+}
