--- a/src/components/centerblock/playlist/Playlist.module.css
+++ b/src/components/centerblock/playlist/Playlist.module.css
@@ -1,6 +1,6 @@
 .centerblockContent {
-  /* width: 100%; */
-  height: 640px;
+  width: 100%;
+  height: 650px;
   /* height: 30%; */
   display: flex;
   flex-direction: column;
