--- a/src/app/error.module.css
+++ b/src/app/error.module.css
@@ -13,7 +13,7 @@
   width: 268px;
   height: 96px;
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   justify-content: center;
   align-items: flex-end;
 }
